[package]
name = "wanit"
version = "0.1.0"
edition = "2021"
description = "A terminal user interface for Wanikani"
homepage = "https://github.com/GitBluub/wanit"
documentation = "https://github.com/GitBluub/wanit"
repository = "https://github.com/GitBluub/wanit"
keywords = ["wanikani", "tui", "cli", "terminal"]
categories = ["command-line-utilities"]
authors = ["Louis Auzuret <louis.auzuret@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
wanikani-rs = "0.1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.13", features = ["json"] }
[[bin]]
path = "src/main.rs"
name = "wanit"
